--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,21 +1,7 @@
-# {# pkglts, pysetup
-
-include AUTHORS.rst
-include CONTRIBUTING.rst
-include HISTORY.rst
-include README.rst
-
+include README.md
 include LICENSE
-include requirements.txt
-include requirements_minimal.txt
 
 recursive-include test *
 
-
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
-
-recursive-include doc *.rst
-
-
-# #}
